tests/sksl/errors/OverflowFloatLiteral.glsl
### Compilation failed:

error: 2: floating-point value is too large: 3.41e+38
1 error
